gobmkida/c3/topological_eye
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/topological_eye/src/engine/optics.c:2164:7: error: use of undeclared identifier 'dword_4A89E0'
v23 = dword_4A89E0[v51]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/topological_eye/src/obj/1/optics.o] Error 1
